# converto-business-os-mvp

./: .env.sample  .gitignore  .pre-commit-config.yaml  COMPLETED_TASKS_SUMMARY.md  COPY_PASTE_CHECKLIST.md  DASHBOARD_FIX_GUIDE.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_COPY_PASTE.md  Dockerfile  FINAL_DEPLOYMENT_STATUS.md  FINAL_DEPLOYMENT_VERIFICATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  KESKUSTELUN_LOPULLINEN_TARKISTUS.md  KESKUSTELUN_MUUTOKSET_VERIFIOINTI.md  LOCAL_TEST_RESULTS.md  Makefile  PRODUCTION_DEPLOY_RUNBOOK.md  PROJECT_COMPLETE_SUMMARY.md  PROJEKTI_PÄIVITYS_24_11_2024.md  QUICK_DEPLOY.md  README.md  READY_TO_DEPLOY.md  SETUP_NOW.md  START_HERE.md  VERCEL_DEPLOY_GUIDE.md  VERCEL_QUICK_START.md  VEROPILOT_DEPLOYMENT_SUMMARY.md  deploy-veropilot.sh  docker-compose.modular-core.yml  docker-compose.yml  env.modular.example  env.production.example  fly.toml  mcp_deepseek_server.js  mcp_resend_server 2.js  mcp_resend_server.js  mcp_supabase_server.js  mcp_vercel_deploy_server.js  mcp_vercel_server.js  (+10 more)
.github/: dependabot.yml
backend/: CORS_FIX.md  DEPENDENCY_FIX.md  DEPLOYMENT_MONITORING.md  Dockerfile  FLY_DEPLOYMENT_FIX.md  FLY_DEPLOYMENT_SUCCESS.md  FLY_IO_DEPLOYMENT_DEBUG.md  README_ARCHIVED.md  config.py  fly.toml  main.py  main_simple.py  pyproject.toml  requirements.txt  sentry_init.py
backend/app/: websocket.py
backend/app/middleware/: timing.py
backend/app/routes/: auth.py  beta.py  linear_optimized.py  metrics.py  stripe.py  users.py
backend/modules/: linear_automation.py
backend/routes/: auth.py
backend/schemas/: receipts.py
(+844 files in other folders)
